Fixed left margin issue on small logo

--- a/themes/foodiepro-2.1.8/style.css
+++ b/themes/foodiepro-2.1.8/style.css
@@ -2335,7 +2335,7 @@ Site Header
 .site-title,
 .site-title a {
 	padding:0; /* P.O. Original 16px 0 */
-	width:290px; /* P.O. Original 360px */
+	width:300px; /* P.O. Original 360px */
 	height:70px; /* P.O. Original 300px */
 	float:left;
   text-indent:-9999px;
